--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,11 @@
     <scope>test</scope>
 </dependency>
 
-  
+  <dependency>
+   <groupId>ch.qos.logback</groupId>
+   <artifactId>logback-core</artifactId>
+   <version>1.0.13</version>
+</dependency>
   </dependencies>
   
   
